--- a/anova2.qmd
+++ b/anova2.qmd
@@ -351,7 +351,7 @@ aov2 <- run_oneway(data = alone,
                    parametric = TRUE)
               
 
-aov2$anova_table
+aov2$plot
 
 #aov <- run_rm(data = alone, dv = "days_lasted", id = "country", within = "gender", which_within = "gender")
 
