--- a/cor_reg.qmd
+++ b/cor_reg.qmd
@@ -179,7 +179,7 @@ Per different [online resources](https://www.statology.org/what-is-a-strong-corr
 **The values shown below are for** $|r|$**. You will have to mention whether is it *positive* or *negative*.**
 
 | Absolute value of *r* / $\rho$ | Strength of relationship |
-|----|----|
+|------------------------------------|------------------------------------|
 | $r < 0.25$ | Very weak relationship / very weakly correlated |
 | $0.25 ≤ r < 0.5$ | Weak relationship / weakly correlated |
 | $0.5 ≤ r < 0.75$ | Moderate relationship / moderately correlated |
@@ -466,6 +466,8 @@ A few possible results:
 UNK releases data on many metrics each year, including both budgetary and enrollment information. These data are publicly available via the STAR report. You want to use these data to see how recent scholarship budgeting changes have impacts different metrics.
 
 For each part of this question, state if tuition spending has significantly changed the response variable. Make sure to include your statistics and $p$-value.
+
+**Do not normalize the remission percent data.**
 
 ##### a.
 
